--- a/index.html
+++ b/index.html
@@ -10,28 +10,16 @@
 <body>
    
 <h1>MY FIRST JAVASCRIPT EXPERIENCE</h1>
-<h1> The number of seconds in a week is  <p id="day"></p> seconds</h1>
-<!-- <button type="button"> <p id='time'> Click me to display Date and Time.</p></button> -->
+<h1> The number of seconds in a week is  <p id="day"></p></h1>
 
 <h1>My First JavaScript</h1>
-
-<button type="button"
-onclick="document.getElementById('demo').innerHTML = Date()">
-Click me to display Date and Time.</button>
+<div>
+    <button type="button"
+    onclick="document.getElementById('demo').innerHTML = Date()">
+    Click me to display Date and Time.</button>
+</div>
 
 <h1 id="demo"></h1>
-
-
-
-
-      <!-- <h1 id="time">JavaScript</h1>  -->
-
-   <!-- <span> the addition of 6 and 7 is  <p id="learn"></p></span> -->
-    <!-- <h3 id="learn">the  boy is good</h3>  -->
-    <!-- <p id="userAge"></p>
-    <h2 id="phone"></h2>
-    <h4 id="address"></h4>
-    <h5 id="color"></h5> -->
     <script src="main.js"></script>
 </body>
 </html>
